[gd_scene load_steps=4 format=3 uid="uid://p5ciagm88o2r"]

[ext_resource type="Script" path="res://scripts/snap_object.gd" id="1_cxb6k"]
[ext_resource type="Texture2D" uid="uid://bp65luj4s2yex" path="res://assets/images/test_cards/Card_Template_Test_Blue.png" id="2_25yul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xecvi"]
size = Vector2(199, 267)

[node name="Snap" type="Node2D"]
script = ExtResource("1_cxb6k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_25yul")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 1.5)
shape = SubResource("RectangleShape2D_xecvi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
